--- a/typeahead.html
+++ b/typeahead.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Typeahead (vue)</title>
+
+<style>
+[role="option"][aria-selected="true"] {color: red;}
+</style>
+
 </head>
 <body>
 <h1>Typeahead (vue)</h1>
