* added keyboard instructions

--- a/typeahead.html
+++ b/typeahead.html
@@ -19,6 +19,21 @@ content='["chocolate", "vanilla", "strawberry", "coconut"]'>
 </typeahead>
 </div>
 
+<div id="help">
+<h2>Keyboard Controls</h2>
+<ul><li>
+when focused on the input control, up / down arrows shift focus into the list and move through the items
+</li><li>
+spacebar toggles selection of an item in the list
+</li><li>
+enter completes the action (event is fired and alert is shown for demo purposes)
+</li><li>
+escape cancels current action and returns focus to the input box
+</li><li>
+normal text editing commands can be used when focus is in the input field
+</li></ul>
+</div>
+
 
 <script src="vue.js"></script>
 <script src="typeahead.js"></script>
