* you can now specify result attribute and value accepts an property argument
- result specifies property of selected items to place in input element on completion
- value method accepts an property argument which returns an array of values of that property (used by complete)
- the detail property of the complete custom event contains the Vue instance; the event is fired at the input element attached to that  instance

--- a/typeahead.html
+++ b/typeahead.html
@@ -19,7 +19,7 @@
 content='["chocolate", "vanilla", "strawberry", "coconut"]'>
 </typeahead>
 
-<typeahead label="Choose something: " multiselect display="`${item.value}: ${item.text}`"
+<typeahead label="Choose something: " multiselect display="`${item.value}: ${item.text}`" result="value"
 content='[
 {"text": "something", "value": "598378"},
 {"text": "else", "value": "59829"},
@@ -58,7 +58,7 @@ el: $("#app")
 let components = app.$children;
 console.log ("components: ", components.length);
 
-document.addEventListener ("complete", (e) => alert (`result: ${e.target.value}`));
+document.addEventListener ("complete", (e) => alert (`result: ${JSON.stringify(e.detail.selectedItems())}`));
 
 modify.addEventListener ("click", () => {
 components[0].setContent([1,2,3,4,5])
